chore: fix local build issues

--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "fyodorio-is-gridsome",
+  "packageManager": "bun@1",
   "scripts": {
     "start": "bun run develop",
-    "build": "gridsome build",
-    "develop": "gridsome develop",
-    "explore": "gridsome explore"
+    "build": "node ./node_modules/@gridsome/cli/bin/gridsome.js build",
+    "develop": "node ./node_modules/@gridsome/cli/bin/gridsome.js develop",
+    "explore": "node ./node_modules/@gridsome/cli/bin/gridsome.js explore"
+  },
+  "overrides": {
+    "sharp": "0.34.5"
   },
   "dependencies": {
     "@gridsome/remark-prismjs": "0.5.0",
     "@gridsome/source-filesystem": "0.6.2",
     "@gridsome/transformer-remark": "0.6.4",
-    "gridsome": "0.7.23"
-  },
-  "devDependencies": {
+    "gridsome": "0.7.23",
     "sass": "1.43.5",
-    "sass-loader": "10.5.2"
+    "sass-loader": "10.5.2",
+    "sharp": "0.34.5"
   }
 }
